@@ -5,5 +5,15 @@
 #
 
 my $self = shift;
+
+# log out text
+if ($self->is_user && -e "$main::data/logout") {
+	open(I, "$main::data/logout") or confess;
+	my @in = <I>;
+	close(I);
+	$self->send_now('D', @in);
+	sleep(1);
+}
+
 $self->state('bye');
 return (1);
