@@ -15,7 +15,7 @@ foreach $call (@list) {
   $call = uc $call;
   my $ref = DXChannel->get($call);
   if ($ref) {
-    @out = print_all_fields($self, $ref, "Channe Information $call");
+    @out = print_all_fields($self, $ref, "Channel Information $call");
   } else {
     return (0, "Channel: $call not found") if !$ref;
   }
